--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
 
 
       <section id="main_content">
-        <h3>Welcome to GitHub Pages.</h3>
+        <h3>Welcome</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+<p>This software creates seating plan for examinations. It provides four different strategies to create seat plan.</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
