web counter added

--- a/BaKaPlan/index.html
+++ b/BaKaPlan/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<head>
+<head> 
 <title> BAKAPLAN-Beta </title>
 <link rel="stylesheet" href="styles.css" type="text/css">
 
@@ -23,8 +23,18 @@ Prepare seating plan for examination.
 <h1><a href="../cgi-bin/bakaplan/branchdetails.html">Click to Enter </a></h1>
 
 </div>
+<br><br>
 <div id="details" align = "center" valign = "bottom" height = "240%">
-<br><br><br><br><br><br><br><br><br>
+<br><br>
+<div id="details" align = "center" valign = "bottom" height = "240%">
+
+<a href="http://www.easycounter.com/">
+<img src="http://www.easycounter.com/counter.php?megha55"
+border="0" alt="Web Counters"></a>
+<br><a href="http://www.easycounter.com/">Web Counters</a>
+
+<br><br><br><br><br><br><br>
+
 <a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>
  | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>
  | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>
