web counter link removed

--- a/BaKaPlan/index.html
+++ b/BaKaPlan/index.html
@@ -26,10 +26,12 @@ Prepare seating plan for examination.
 <br><br>
 <div id="details" align = "center" valign = "bottom" height = "240%">
 
-<a href="http://www.easycounter.com/">
+<!--<a href=" ">-->
 <img src="http://www.easycounter.com/counter.php?megha55"
-border="0" alt="Web Counters"></a>
-<br><a href="http://www.easycounter.com/">Web Counters</a>
+border="0" alt="Web Counters"> <br>
+<!--</a><br><a href=" ">-->
+Web Counters
+<!--</a>-->
 
 <br><br><br><br><br><br><br>
 
