--- a/BakaPlan/BaKaPlan/index.html
+++ b/BakaPlan/BaKaPlan/index.html
@@ -33,10 +33,10 @@
 <nav class="clearfix fullwidth">
 	<ul class="clearfix">
 		<li><a href="#">About</a></li>		
-		<li><a href="https://github.com/GreatDevelopers/bakaplan/blob/master/USER%20GUIDE.txt">How to use?</a></li>
-		<li><a href="https://github.com/GreatDevelopers/bakaplan/issues/new#">Participate</a></li>
-		<li><a href="https://github.com/GreatDevelopers/bakaplan">Fork me</a></li>
-		<li><a href="https://github.com/GreatDevelopers/bakaplan#authors">Contact</a></li>
+		<li><a href="https://github.com/GreatDevelopers/bakaplan/blob/master/USER%20GUIDE.txt" target="_blank">How to use?</a></li>
+		<li><a href="https://github.com/GreatDevelopers/bakaplan/issues/new#" target="_blank">Participate</a></li>
+		<li><a href="https://github.com/GreatDevelopers/bakaplan" target="_blank">Fork me</a></li>
+		<li><a href="https://github.com/GreatDevelopers/bakaplan#authors" target="_blank">Contact</a></li>
 		
 	</ul>
 	<a href="#" id="pull">Menu</a>
@@ -45,22 +45,17 @@
 <div id="wrapper">
 	<div id="banner">
 <div id="Frontlogo" class="logo">Baka Plan <sup> (Beta) </sup></div> 
-<div id="quote"> "Baithne ka plan" </br> The sitting plan for colleges, schools, conferences etc. </div>
+<div id="quote"> "Baithne ka plan" </br> The sitting plan for colleges, schools, conferences etc. 
+</div>
 </div>
 <div id="button">
 <a href="../cgi-bin/bakaplan/BakaPlan/branchdetails.html" class="btn">Start Here</a>
 
-<a href="#" class="btn">Download</a>
+<a href="https://github.com/GreatDevelopers/bakaplan/zipball/master" class="btn">Download</a>
 </div>
 </div>
 <footer>
 <div id="details" align = "center"  height = "240%">
-<!--<a href="https://github.com/GreatDevelopers/bakaplan#readme"> How to use?</a>-->
-<!-- | <a href="https://github.com/GreatDevelopers/bakaplan"> Get Source Code </a>-->
-<!-- | <a href="https://github.com/GreatDevelopers/bakaplan/issues/new#"> Submit any Feature/Bug </a>-->
-<!-- | <a href="https://github.com/GreatDevelopers/bakaplan#authors"> Contact Us </a>-->
-<!--<br>-->
-<!--<br>-->
 Brought to you by 
 <a href="https://github.com/GreatDevelopers/bakaplan#authors">GreatDevelopers </a> 
 under 
