--- a/BakaPlan/BaKaPlan/index.html
+++ b/BakaPlan/BaKaPlan/index.html
@@ -34,8 +34,8 @@
 	<ul class="clearfix">
 		<li><a href="#">About</a></li>		
 		<li><a href="https://github.com/GreatDevelopers/bakaplan/blob/master/USER%20GUIDE.txt" target="_blank">How to use?</a></li>
-		<li><a href="https://github.com/GreatDevelopers/bakaplan/issues/new#" target="_blank">Participate</a></li>
-		<li><a href="https://github.com/GreatDevelopers/bakaplan" target="_blank">Fork me</a></li>
+		<li><a href="https://github.com/GreatDevelopers/bakaplan/issues/new#" target="_blank">Add Feature/Bug</a></li>
+<!--		<li><a href="https://github.com/GreatDevelopers/bakaplan" target="_blank">Fork me</a></li>-->
 		<li><a href="https://github.com/GreatDevelopers/bakaplan#authors" target="_blank">Contact</a></li>
 		
 	</ul>
@@ -44,14 +44,13 @@
 </header>
 <div id="wrapper">
 	<div id="banner">
-<div id="Frontlogo" class="logo">Baka Plan <sup> (Beta) </sup></div> 
-<div id="quote"> "Baithne ka plan" </br> The sitting plan for colleges, schools, conferences etc. 
+<div id="Frontlogo" class="logo">BaKa Plan<sup>Beta </sup></div> 
+<div id="quote"> "Baithne Ka Plan" </br> The sitting plan for colleges, schools, conferences etc. 
 </div>
 </div>
 <div id="button">
 <a href="../cgi-bin/bakaplan/BakaPlan/branchdetails.html" class="btn">Start Here</a>
 
-<a href="https://github.com/GreatDevelopers/bakaplan/zipball/master" class="btn">Download</a>
 </div>
 </div>
 <footer>
