--- a/BakaPlan/BaKaPlan/index.html
+++ b/BakaPlan/BaKaPlan/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <head> 
 <title> BAKAPLAN-Beta </title>
+
+<meta name="description" content="Prepare Seating Plan">
+<meta name="keywords" content="BaKa Plan,Seating Plan,Seat,Plan">
+
 <link rel="stylesheet" href="styles.css" type="text/css">
 
 <link href='http://fonts.googleapis.com/css?family=Quicksand|Julius+Sans+One' rel='stylesheet' type='text/css'>
