--- a/BaKaPlan/contact.html
+++ b/BaKaPlan/contact.html
@@ -28,10 +28,10 @@
 	<nav class="side-menu">
 	<span id="toggle-menu"> <p id="toggle-menu-circle"> Show Menu </p> </span>
 	<h3> Ba<span class="ka">ka</span> Plan</h3>
-	<a href="index.html"> Home </a>
+	<a href="../cgi-bin/bp/home"> Home </a>
 	<a href="about.html"> About </a>
-	<a href="contribute.html"> Contribute </a>
-	<a href="login.html"> Login/Signup </a>
+<!--	<a href="contribute.html"> Contribute </a>-->
+	<a href="../cgi-bin/bp/login"> Login/Signup </a>
 	</nav> 
 	<div class="page-wrap">
 		
