--- a/index.html
+++ b/index.html
@@ -48,7 +48,22 @@
       <section id="main_content">
         <h3>Welcome</h3>
 
-<p>This software creates seating plan for examinations. It provides four different strategies to create seat plan.</p>
+<p>BaKaPlan generate seating plan on the basis of subject code. All strategies allocate seats acording to subject code whether it is continuous or dis-continuous subjects. 
+Simplest strategy is Cushy. If examination has multiple set of subject then this is best.</p>
+
+<h3>Strategies of seating plan for examination</h3>
+
+<ul>
+
+    <li>Cushy</li>
+    <li>Flip Flop</li>
+    <li>Triplet</li>
+    <li>Quad-let</li>
+    <li>Serpentine</li>
+
+</ul>
+
+<h3> Current Verion: 0.7 </h3>
 
 <!--<pre><code>$ cd your_repo_root/repo_name-->
 <!--$ git fetch origin-->
