--- a/triplet.html
+++ b/triplet.html
@@ -37,28 +37,14 @@
         <hr>
 
         <section id="main_content">
-        <h2>BaKaPlan</h2>
-
-        <p>BaKaPlan generate seating plan on the basis of subject code. All strategies allocate seats acording to subject code whether it is continuous or dis-continuous subjects. Simplest strategy is Cushy. If examination has multiple set of subject then this is best.</p>
-         <section id="downloads" class="clearfix">
-       
-          <a href="http://202.164.53.122/~mandeep/cgi-bin/bp/login"
-          id="view-on-github" class="button"><span>Demo</span></a>
-       </section>
-
-        <h2>Strategies of seating plan for examination</h2>
-
-        <ul>
-
-            <li><a href="cushy.html" >Cushy</a></li>
-            <li><a href="flipflop.html" >Flip Flop</a></li>
-            <li><a href="triplet.html" >Triplet</a></li>
-            <li><a href="quadlet.html" >Quad-let</a></li>
-            <li><a href="serpentine.html" >Serpentine</a></li>
-
-        </ul>
-
-        <h2> Current Verion: 0.7 </h2>
+        <h2>BaKaPlan </h2>
+        <h3> Third Strategy: Triplet </h3>
+        <p>
+        Triplet means combination of 3 subject codes. Their is no seating plan with continuous subject code.
+        </p>
+        <p>
+        <img src="images/triplet.png" alt="Triplet Strategy" >
+        </p>
 
         </section>
 
