--- a/cushy.html
+++ b/cushy.html
@@ -37,28 +37,14 @@
         <hr>
 
         <section id="main_content">
-        <h2>BaKaPlan</h2>
-
-        <p>BaKaPlan generate seating plan on the basis of subject code. All strategies allocate seats acording to subject code whether it is continuous or dis-continuous subjects. Simplest strategy is Cushy. If examination has multiple set of subject then this is best.</p>
-         <section id="downloads" class="clearfix">
-       
-          <a href="http://202.164.53.122/~mandeep/cgi-bin/bp/login"
-          id="view-on-github" class="button"><span>Demo</span></a>
-       </section>
-
-        <h2>Strategies of seating plan for examination</h2>
-
-        <ul>
-
-            <li><a href="cushy.html" >Cushy</a></li>
-            <li><a href="flipflop.html" >Flip Flop</a></li>
-            <li><a href="triplet.html" >Triplet</a></li>
-            <li><a href="quadlet.html" >Quad-let</a></li>
-            <li><a href="serpentine.html" >Serpentine</a></li>
-
-        </ul>
-
-        <h2> Current Verion: 0.7 </h2>
+        <h2>BaKaPlan </h2>
+        <h3> First Strategy: Cushy </h3>
+        <p>
+        Cushy means easy. This is the simplest strategy. In this strategy, seating plan is done continuously. For example, seating plan is done by allocating all roll nos. of first subject code then continuous with 2nd subject code and so on.
+        </p>
+        <p>
+        <img src="images/cushy.png" alt="Cushy Strategy" >
+        </p>
 
         </section>
 
