checking js function

--- a/src/html/NBP/confirm.html
+++ b/src/html/NBP/confirm.html
@@ -27,7 +27,7 @@
 	<script src="js/backend/confirm.js"></script>
 	<link rel="stylesheet" href="styles/opentip.css" type="text/css" media="all">
 </head>
-<body class="coloredBody" onload="" >
+<body class="coloredBody" >
 	<nav class="side-menu">
 	<span id="toggle-menu"> <p id="toggle-menu-circle"> Show Menu </p> </span>
 	<h3> Ba<span class="ka">ka</span> Plan</h3>
