--- a/src/html/NBP/contact.html
+++ b/src/html/NBP/contact.html
@@ -53,6 +53,6 @@
 </div>
 <script type="text/javascript" src="js/sidemenu.js"></script>	
 <script type="text/javascript" src="js/opentip-myStyles.js"></script>
-<script type="text/javascript" src="js/tooltip.js"></script>
+<script type="text/javascript" src="js/validation/contact.js"></script>
 </body>
 </html>
