changed links to integrate with version0.8 branch

--- a/src/html/NBP/confirm.html
+++ b/src/html/NBP/confirm.html
@@ -41,6 +41,7 @@
 		
 	<h1 id="tipTarget">~</h1>
     <div id="msg"></div>
+        <div if="form">
 		<form class="theForm" id="set-password" name="set-password" action="#" >	
 			<h2> Set Password </h2>
 			<label for="password" class="theLabel">Password</label>
@@ -54,6 +55,7 @@
 			<input type="submit"name="theSubmit" id="theSubmit"
             class="theFormButton" value="Submit" />
 		</form>
+        </div>
 
 	</div>
 </div>
