--- a/src/html/index.html
+++ b/src/html/index.html
@@ -5,7 +5,7 @@
 -version: 2.0
 -date:7th May, 2013
 -@author: Mandeep Kaur (simak.in)
--@author: Inderpreet Singh Ishwerdas(ishwerdas.com)
+-@author: Inderpreet Singh Ishwerdas (ishwerdas.com)
 -@license: GPL Ver 3.0 
 -->
 <!DOCTYPE html>
@@ -88,8 +88,13 @@
 						<div id="welcome-ticker-container" class="tagline">
 							<ul class="ticker">
 								<li> The easiest seating planner ever, making seating plan has never been this easy</li>
-								<li> It's Open Source, so goodness is built right into it's DNA</li>
+<!--								<li> It's Open Source, so goodness is built right into it's DNA</li>
+                                    
 								<li> Multiple Stratedgies,to choose from. Everyone likes choice.</li>
+                                -->
+                                <li> Generate seating plan for
+                                schools, colleges, auditorioums </li>
+                                <li> Seating plan for examinations </li>
 							</ul>
 						</div>	
 				 
