updated login and signup module

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -91,9 +91,13 @@
 <!--								<li> It's Open Source, so goodness is built right into it's DNA</li>
                                     
 								<li> Multiple Stratedgies,to choose from. Everyone likes choice.</li>
-                                -->
+                                
                                 <li> Generate seating plan for
-                                schools, colleges, auditorioums </li>
+                                schools, colleges, auditorioums
+                                </li>-->
+                                <li>An application to generate
+                                examination seating plans for
+                                educational institutions </li>
                                 <li> Seating plan for examinations </li>
 							</ul>
 						</div>	
