--- a/src/html/index.html
+++ b/src/html/index.html
@@ -111,7 +111,7 @@
 		<footer class="sticky-footer"> <!-- footer that sticks to bottom, contains navigation and tickr slider -->
 			<nav class="footer-nav">
 				<a href="about.html" class="navelement"> About </a>
-				<a href="contribute.html" class="navelement"> Contribute </a>
+				<a href="https://github.com/GreatDevelopers/bakaplan" class="navelement"> Contribute </a>
 				<a href="contact.html" class="navelement"> Contact </a>
 			</nav>
 	
