confir email and set password

--- a/src/html/confirm.html
+++ b/src/html/confirm.html
@@ -45,7 +45,7 @@
 		<form class="theForm" id="set-password" name="set-password"
         onsubmit="return SetPassword();" action="#" >	
 			<h2> Set Password </h2>
-            <input type="hidden" id="EmailID" value="emailid" />
+            <input type="hidden" id="RegID" value="regid" />
 			<label for="password" class="theLabel">Password</label>
 			<input type="password" name="password" id="password"
             class="theFormTextInput" placeholder=" Fill Password"/>
